--- a/client/index.html
+++ b/client/index.html
@@ -84,7 +84,7 @@
 	            	<div class="row">
 		            	<div class="col-md-3 col-lg-2 dpBlock hidden-xs hidden-sm"  style="text-align:center" >
 		            		<div>
-		            			<img src="images/roastee.jpg" class="profilePic"/>
+		            			<img src="images/user.jpg" class="profilePic"/>
 		            		</div>
 		            		<div>
 		            			<p class="f20"><b>Satish Mishra</b></p>
