--- a/client/index.html
+++ b/client/index.html
@@ -54,13 +54,13 @@
 	                    <div class="toolBoxText"><b>Home</b>
 	                    </div>
 	                </div>
-	                <div class="toolBlock" ng-click="goToHome()">
+	                <div class="toolBlock" ng-click="goToRoastCategory()">
 	                    <div class="interviewNo"><i class="glyphicon glyphicon-fire"></i>
 	                    </div>
 	                    <div class="toolBoxText"><b>Roasts</b>
 	                    </div>
 	                </div>
-	                <div class="toolBlock" ng-click="goToHome()">
+	                <div class="toolBlock" ng-click="goToQnAPage()">
 	                    <div class="interviewNo"><i class="glyphicon glyphicon-question-sign"></i>
 	                    </div>
 	                    <div class="toolBoxText"><b>Q & A</b>
