debate is created

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 	    <script type="text/javascript" src="appResources/library/angular/angular-route-min.js"></script>
 		<link rel="stylesheet" type="text/css" href="appResources/library/TwitterBootStrap/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="appResources/styles/style.css">
-		<script type="text/javascript" src="/appResources/app.js"></script>
+		<script type="text/javascript" src="appResources/app.js"></script>
 		
 	</head>
 	<script>
