--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,11 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-	    <script type="text/javascript" src="appResources/library/angular/angular.min.js"></script>
-	    <script type="text/javascript" src="appResources/library/angular/angular-route-min.js"></script>
-		<link rel="stylesheet" type="text/css" href="appResources/library/TwitterBootStrap/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="appResources/styles/style.css">
-		<script type="text/javascript" src="appResources/app.js"></script>
+	    <script type="text/javascript" src="/appResources/library/angular/angular.min.js"></script>
+	    <script type="text/javascript" src="/appResources/library/angular/angular-route-min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/appResources/library/TwitterBootStrap/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/appResources/styles/style.css">
+		<script type="text/javascript" src="/appResources/app.js"></script>
 		
 	</head>
 	<script>
@@ -84,7 +84,7 @@
 	            	<div class="row">
 		            	<div class="col-md-3 col-lg-2 dpBlock hidden-xs hidden-sm"  style="text-align:center" >
 		            		<div>
-		            			<img src="images/user.jpg" class="profilePic"/>
+		            			<img src="/images/user.jpg" class="profilePic"/>
 		            		</div>
 		            		<div>
 		            			<p class="f20"><b>Satish Mishra</b></p>
