few more commits

--- a/client/index.html
+++ b/client/index.html
@@ -70,7 +70,7 @@
 	                    <div class="interviewNo">
 	                    	<i class="glyphicon glyphicon-pencil"></i>
 	                    </div>
-	                    <div class="toolBoxText"><b>Create Roast</b>
+	                    <div class="toolBoxText"><b>Create/Ask</b>
 	                    </div>
 	                </div>
 	                <div class="toolBlock" ng-click="goToHome()">
