--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
 	                    <div class="toolBoxText"><b>Home</b>
 	                    </div>
 	                </div>
-	                <div class="toolBlock" ng-click="goToRoastCategory()">
+	                <div class="toolBlock" ng-click="goToRoasts()">
 	                    <div class="interviewNo"><i class="glyphicon glyphicon-fire"></i>
 	                    </div>
 	                    <div class="toolBoxText"><b>Roasts</b>
