--- a/client/index.html
+++ b/client/index.html
@@ -28,11 +28,12 @@
                                 <i class="glyphicon glyphicon-menu-hamburger pull-left menuCollapseGlyph" ng-click="showToolBox()"></i>
                             </div>
                             <div class="col-xs-8 col-sm-9">
-                                 <p class="hand pull-left titleRoast">IndiaRoasts</p>
+                                 <p class="hand pull-left titleRoast"><img src="/images/logo.jpg" style="height:52px" />India Roasts
+                                 </p>
                             </div>
                             <div class="col-xs-2 col-sm-2">
                                 <div class="userIcon pull-right">
-                                    <span class="glyphicon glyphicon-off" style="font-size:24px;padding-top:10px;"></span>
+                                    <span class="glyphicon glyphicon-off" style="font-size:24px;padding-top:10px;margin-right:-60px"></span>
                                 </div>
                             </div>
                         </div>
@@ -42,7 +43,9 @@
 	        <div class="row tMar50">
 	            <div class="toolClass" ng-class="{'mleft80' : toolBoxActive}">
 	                <div class="toolBlock" ng-click="goToTrending()">
-	                    <div class="interviewNo"><i class="glyphicon glyphicon-flash"></i></div>
+	                    <div class="interviewNo">
+	                    	<i class="glyphicon glyphicon-flash"></i>
+	                    </div>
 	                    <div class="toolBoxText">
 	                    	<b>Trending</b>
 	                    </div>
@@ -51,7 +54,8 @@
 	                    <div class="interviewNo">
 	                    	<i class="glyphicon glyphicon-home"></i>
 	                    </div>
-	                    <div class="toolBoxText"><b>Home</b>
+	                    <div class="toolBoxText">
+	                    	<b>Home</b>
 	                    </div>
 	                </div>
 	                <div class="toolBlock" ng-click="goToRoasts()">
@@ -113,7 +117,7 @@
 		            			Appreciations: 20
 		            		</div>
 		            	</div> -->
-			            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-6" style="background-color:#fff;">
+			            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-6 ngViewBG">
 			                <!-- space for content -->
 			                <div id="main">
 
