image upload added

--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,8 @@
                             </div>
                             <div class="col-xs-2 col-sm-2">
                                 <div class="userIcon pull-right">
-                                    <span class="glyphicon glyphicon-off" style="font-size:24px;padding-top:10px;margin-right:-60px"></span>
+                                    <span class="glyphicon glyphicon-off" ng-if="loggedIn" style="font-size:24px;padding-top:10px;margin-right:-60px"></span>
+                                    <p class="hand" style="font-size:18px;margin-top:10px;margin-right:-50px">Login</p>
                                 </div>
                             </div>
                         </div>
