--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
     <body ng-controller="roastIndexController">
         <!--Navbar Begin-->
 
-        <div class="container-fluid">
+        <div class="container-fluid" ng-class="{'darker':modalOpen}">
 	        <div class="row">
 	            <div class="col-xs-12 backColor">
 	                <div class="row">
@@ -34,14 +34,28 @@
                             <div class="col-xs-2 col-sm-2">
                                 <div class="userIcon pull-right">
                                     <span class="glyphicon glyphicon-off" ng-if="loggedIn" style="font-size:24px;padding-top:10px;margin-right:-60px"></span>
-                                    <p class="hand" style="font-size:18px;margin-top:10px;margin-right:-50px">Login</p>
+                                    <p class="hand" ng-click="loginModal()" style="font-size:18px;margin-top:10px;margin-right:-50px">Login</p>
                                 </div>
                             </div>
                         </div>
                     </div>
 	            </div>
 	        </div>
-	        <div class="row tMar50">
+	        <div class="col-xs-12 col-sm-offset-4 col-sm-4 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" ng-if="modalOpen">
+		        <div class="col-xs-12 modalWindow">
+		            <div class="row">
+		                <div class="col-xs-12">
+		                    <i class="glyphicon glyphicon-remove pull-right hand" ng-click="cancelModal()"></i>
+		                </div>
+		                <div class="col-xs-12">
+		                    <p class="mBottom20">Login</p>
+		                    <input class="form-control mBottom20" type="text" placeholder="Enter Name"/>
+		                    <input class="form-control mBottom20" type="text" placeholder="Enter mail ID"/>
+			      		</div>
+			   		</div>
+			  	</div>
+		    </div>
+	        <div class="row tMar50" ng-hide="modalOpen">
 	            <div class="toolClass" ng-class="{'mleft80' : toolBoxActive}">
 	                <div class="toolBlock" ng-click="goToTrending()">
 	                    <div class="interviewNo">
@@ -118,7 +132,7 @@
 		            			Appreciations: 20
 		            		</div>
 		            	</div> -->
-			            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-6 ngViewBG">
+			            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-6 ngViewBG" ng-class="{'darker':modalOpen}">
 			                <!-- space for content -->
 			                <div id="main">
 
