--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	    <script type="text/javascript" src="/appResources/library/angular/angular.min.js"></script>
+	    <script type="text/javascript" src="/appResources/library/angular/ngStorage.js"></script>
 	    <script type="text/javascript" src="/appResources/library/angular/angular-route-min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/appResources/library/TwitterBootStrap/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/appResources/styles/style.css">
