metal SLUGS added.

--- a/client/index.html
+++ b/client/index.html
@@ -49,11 +49,8 @@
 		                </div>
 		                <div class="col-xs-12">
 		                    <p class="mBottom20">Login</p>
-		                    <input class="form-control mBottom20" type="text" placeholder="Enter Name"/>
-		                    <input class="form-control mBottom20" type="text" placeholder="Enter mail ID"/>
-		                    <button class="btn btn-primary" ng-click="GoToGoogleLogin()">Login</button>
-		                    
-			      		</div>
+		                    <img src="/images/googleplusLg.png" class="hand" ng-click="GoToGoogleLogin()"/>
+		               	</div>
 
 			      		<form name="googleLogin" action="/auth/google" method="get"></form>
 			   		</div>
