--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+        <link rel="icon" type="image/ico" href="/images/logo.jpg"/>
+
 	    <script type="text/javascript" src="/appResources/library/angular/angular.min.js"></script>
 	    <script type="text/javascript" src="/appResources/library/angular/angular-route-min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/appResources/library/TwitterBootStrap/bootstrap.min.css">
@@ -133,7 +135,7 @@
 		            			Appreciations: 20
 		            		</div>
 		            	</div> -->
-			            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-6 ngViewBG" ng-class="{'darker':modalOpen}">
+			            <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-7 col-md-offset-0 col-lg-offset-0 col-lg-6 ngViewBG" ng-class="{'darker':modalOpen}" ng-click="hideToolBox()">
 			                <!-- space for content -->
 			                <div id="main">
 
