facebook login pending

--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,7 @@
 		                <div class="col-xs-12">
 		                    <p class="mBottom20">Login</p>
 		                    <img src="/images/googleplusLg.png" class="hand" ng-click="GoToGoogleLogin()"/>
+		                    <img src="/images/facebookLg.png" class="hand" ng-click="GoToFacebookLogin()"/>
 		               	</div>
 
 			      		<form name="googleLogin" action="/auth/google" method="get"></form>
