--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
                             <div class="col-xs-2 col-sm-2">
                                 <div class="userIcon pull-right">
                                     <span class="glyphicon glyphicon-off hand" ng-click="logout()" ng-if="isLoggedin" style="font-size:24px;padding-top:10px;margin-right:-60px"></span>
+                                    <span class="glyphicon glyphicon-bell hand" ng-click="goToHome()" ng-if="isLoggedin" style="font-size:24px;padding-top:10px;margin-right:-60px"></span>
                                     <p class="hand" ng-click="loginModal()" ng-hide="isLoggedin" style="font-size:18px;margin-top:10px;margin-right:-50px">Login</p>
                                 </div>
                             </div>
