--- a/client/index.html
+++ b/client/index.html
@@ -34,11 +34,11 @@
                                  </p>
                             </div>
                             <div class="col-xs-2 col-sm-2">
-                                <div class="userIcon pull-right">
-                                    <span class="glyphicon glyphicon-off hand" ng-click="logout()" ng-if="isLoggedin" style="font-size:24px;padding-top:10px;margin-right:-60px"></span>
+                                <div class="userIcon">
+                                    <span class="glyphicon glyphicon-off hand" ng-click="logout()" ng-if="isLoggedin" style="font-size:24px;padding-top:10px;margin-right:-75px"></span>
                                     <span class="glyphicon glyphicon-bell hand" ng-click="goToNotif()" ng-if="isLoggedin" style="font-size:24px;padding-top:10px;margin-right:-60px"></span>
-                                    <span class="badge hand" ng-click="goToNotif()" ng-if="isLoggedin" style="font-size:14px;padding-top: 3px;margin-left: 20px;margin-top:-33px;background-color:#FF9108;">{{count}}</span>
-                                    <p class="hand" ng-click="loginModal()" ng-hide="isLoggedin" style="font-size:18px;margin-top:10px;margin-right:-50px">Login</p>
+                                    <span class="badge hand" ng-click="goToNotif()" ng-if="isLoggedin" style="font-size:14px;padding-top: 3px;margin-left: 20px;margin-top:-33px;background-color:#F73636;">{{count}}</span>
+                                    <p class="hand loginTxt pull-right" ng-click="loginModal()" ng-hide="isLoggedin">Login</p>
                                 </div>
                             </div>
                         </div>
