Added facebook auth

--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,7 @@
 		               	</div>
 
 			      		<form name="googleLogin" action="/auth/google" method="get"></form>
+			      		<form name="facebookLogin" action="/auth/facebook" method="get"></form>
 			   		</div>
 			  	</div>
 		    </div>
