--- a/client/index.html
+++ b/client/index.html
@@ -80,12 +80,6 @@
 	                    	<b>Home</b>
 	                    </div>
 	                </div>
-	                <div class="toolBlock" ng-click="goToRoasts()">
-	                    <div class="interviewNo"><i class="glyphicon glyphicon-fire"></i>
-	                    </div>
-	                    <div class="toolBoxText"><b>Roasts</b>
-	                    </div>
-	                </div>
 	                <div class="toolBlock" ng-click="goToQnAPage()">
 	                    <div class="interviewNo"><i class="glyphicon glyphicon-question-sign"></i>
 	                    </div>
@@ -99,7 +93,13 @@
 	                    <div class="toolBoxText"><b>Create/Ask</b>
 	                    </div>
 	                </div>
-	                <div class="toolBlock" ng-click="goToHome()">
+	                <div class="toolBlock" ng-click="goToRoasts()">
+	                    <div class="interviewNo"><i class="glyphicon glyphicon-fire"></i>
+	                    </div>
+	                    <div class="toolBoxText"><b>Roasts</b>
+	                    </div>
+	                </div>
+	                <div class="toolBlock" ng-click="goToAboutUs()">
 	                    <div class="interviewNo"><i class="glyphicon glyphicon-info-sign"></i>
 	                    </div>
 	                    <div class="toolBoxText"><b>About Us</b>
@@ -114,31 +114,17 @@
 		            		</div>
 		            		<div>
 		            			<p class="f20"><b>{{userName}}</b></p>
+		            			<p style="font-size:10px;color:gray;">{{email}}</p>
 		            		</div>
-		            		<div class="col-xs-6">
+		            		<!-- <div class="col-xs-6">
 		            			<p class="f20"><b>12</b></p>
 		            			<p>Roasts</p>
 		            		</div>
 		            		<div class="col-xs-6">
 		            			<p class="f20"><b>14</b></p>
 		            			<p>Answers</p>
-		            		</div>
+		            		</div> -->
 		            	</div>
-		            	<!-- this will be active if user is not logged in -->
-		            	<!-- <div class="col-md-3 col-lg-3 hidden-xs hidden-sm">
-		            		<div>
-		            			<img src="../images/roastee.jpg" class="profilePic" />
-		            		</div>
-		            		<div>
-		            			Satish Mishra
-		            		</div>
-		            		<div>
-		            			Roasts: 2000
-		            		</div>
-		            		<div>
-		            			Appreciations: 20
-		            		</div>
-		            	</div> -->
 			            <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-7 col-md-offset-0 col-lg-offset-0 col-lg-6 ngViewBG" ng-class="{'darker':modalOpen}" ng-click="hideToolBox()">
 			                <!-- space for content -->
 			                <div id="main">
