--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,15 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+        <meta property="og:title" content="<%= title %>" />
+		<meta property="og:type" content="article" />
+		<meta property="og:image" content="" />
+		<meta property="og:url" content="" />
+		<meta property="og:description" content="" />
+
         <link rel="icon" type="image/ico" href="/images/logo.jpg"/>
 
-	    <script type="text/javascript" src="/client/appResources/library/angular/angular.min.js"></script>
+	    <script type="text/javascript" src="/appResources/library/angular/angular.min.js"></script>
 	    <script type="text/javascript" src="/appResources/library/angular/angular-route-min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/appResources/library/TwitterBootStrap/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/appResources/styles/style.css">
@@ -80,12 +86,10 @@
 	                    	<b>Trending</b>
 	                    </div>
 	                </div>
-	                <div class="toolBlock" ng-click="goToHome()">
-	                    <div class="interviewNo">
-	                    	<i class="glyphicon glyphicon-home"></i>
+	                <div class="toolBlock" ng-click="goToRoasts()">
+	                    <div class="interviewNo"><i class="glyphicon glyphicon-fire"></i>
 	                    </div>
-	                    <div class="toolBoxText">
-	                    	<b>Home</b>
+	                    <div class="toolBoxText"><b>Roasts</b>
 	                    </div>
 	                </div>
 	                <div class="toolBlock" ng-click="goToQnAPage()">
@@ -94,17 +98,19 @@
 	                    <div class="toolBoxText"><b>Q & A</b>
 	                    </div>
 	                </div>
+	                <div class="toolBlock" ng-click="goToHome()">
+	                    <div class="interviewNo">
+	                    	<i class="glyphicon glyphicon-home"></i>
+	                    </div>
+	                    <div class="toolBoxText">
+	                    	<b>Home</b>
+	                    </div>
+	                </div>
 	                <div class="toolBlock" ng-click="goToCreate()">
 	                    <div class="interviewNo">
 	                    	<i class="glyphicon glyphicon-pencil"></i>
 	                    </div>
 	                    <div class="toolBoxText"><b>Create/Ask</b>
-	                    </div>
-	                </div>
-	                <div class="toolBlock" ng-click="goToRoasts()">
-	                    <div class="interviewNo"><i class="glyphicon glyphicon-fire"></i>
-	                    </div>
-	                    <div class="toolBoxText"><b>Roasts</b>
 	                    </div>
 	                </div>
 	                <div class="toolBlock" ng-click="goToAboutUs()">
