--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,8 @@
 
         <meta property="og:title" content="<%= title %>" />
 		<meta property="og:type" content="article" />
-		<meta property="og:image" content="" />
-		<meta property="og:url" content="" />
+		<meta property="og:image" content="<%= imageUrl %>" />
+		<meta property="og:url" content="<%= url" />
 		<meta property="og:description" content="" />
 
         <link rel="icon" type="image/ico" href="/images/logo.jpg"/>
