--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="<%= title %>" />
 		<meta property="og:type" content="article" />
 		<meta property="og:image" content="<%= imageUrl %>" />
-		<meta property="og:url" content="<%= url" />
+		<meta property="og:url" content="<%= url %>" />
 		<meta property="og:description" content="" />
 
         <link rel="icon" type="image/ico" href="/images/logo.jpg"/>
@@ -21,7 +21,14 @@
 		
 	</head>
 	<script>
-		
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-68165761-1', 'auto');
+	  ga('send', 'pageview');
+
 	</script>
 
     <body ng-controller="roastIndexController">
